--- a/scss/index.css
+++ b/scss/index.css
@@ -1,26 +1,38 @@
 * {
   font-family: "Roboto Condensed", sans-serif; }
 
-#menu .menu .navbar-brand {
-  width: 179px;
-  height: 65px; }
-#menu .menu .nav-item .nav-link {
-  color: black;
-  font-size: 16px;
-  text-transform: uppercase;
-  font-weight: bold; }
-#menu .menu .item {
-  margin-left: 30px; }
-  #menu .menu .item .link {
-    text-decoration: none; }
-    #menu .menu .item .link img {
-      width: 30px;
-      height: 30px; }
-    #menu .menu .item .link #phone {
-      margin-left: 10px;
-      color: red;
-      font-weight: bold;
-      font-size: 24px; }
+#menu {
+  background-color: white; }
+  #menu .menu .navbar-brand {
+    width: 179px;
+    height: 65px; }
+  #menu .menu .nav-item .nav-link {
+    color: black;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: bold; }
+  #menu .menu .item {
+    margin-left: 30px; }
+    #menu .menu .item .link {
+      text-decoration: none; }
+      #menu .menu .item .link img {
+        width: 30px;
+        height: 30px; }
+      #menu .menu .item .link #phone {
+        margin-left: 10px;
+        color: red;
+        font-weight: bold;
+        font-size: 24px; }
+
+#navbar {
+  background-color: white;
+  position: fixed;
+  top: -150px;
+  width: 100%;
+  transition: top 0.3s;
+  z-index: 999; }
+  #navbar .navbar-brand {
+    margin-left: 150px; }
 
 #info {
   text-align: center;
@@ -281,7 +293,9 @@
     position: relative;
     z-index: 1;
     text-align: center; }
-    #IntroMenu a .icon1, #IntroMenu a .icon2, #IntroMenu a .icon3 {
+    #IntroMenu a .icon1,
+    #IntroMenu a .icon2,
+    #IntroMenu a .icon3 {
       font-size: 25px;
       width: 41px;
       height: 41px;
@@ -341,7 +355,7 @@
     display: none !important; }
 
   #Intro {
-    display: none  !important; } }
+    display: none !important; } }
 @media (min-width: 700px) and (max-width: 900px) {
   .menu .navbar-brand {
     width: 80px !important;
@@ -365,13 +379,19 @@
         font-size: 10px !important; }
 
   #IntroMenu {
-    display: none  !important; }
+    display: none !important; }
 
   #Intro {
-    display: none  !important; } }
+    display: none !important; }
+
+  #navbar {
+    display: none; } }
 @media (min-width: 300px) and (max-width: 700px) {
   #IntroMenu {
     display: none !important; }
 
   #Intro {
-    display: none  !important; } }
+    display: none !important; }
+
+  #navbar {
+    display: none; } }
