--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2,6 +2,7 @@
   font-family: "Roboto Condensed", sans-serif;
 }
 #menu {
+  background-color: white;
   .menu {
     .navbar-brand {
       width: 179px;
@@ -33,7 +34,18 @@
     }
   }
 }
-#banner{
+#navbar {
+  background-color: white;
+  position: fixed;
+  top: -150px;
+  width: 100%;
+  transition: top 0.3s;
+  z-index: 999;
+  .navbar-brand{
+    margin-left: 150px;
+  }
+}
+#banner {
 }
 #info {
   text-align: center;
@@ -367,7 +379,9 @@
     position: relative;
     z-index: 1;
     text-align: center;
-    .icon1,.icon2,.icon3 {
+    .icon1,
+    .icon2,
+    .icon3 {
       font-size: 25px;
       width: 41px;
       height: 41px;
@@ -380,16 +394,15 @@
       box-shadow: 0 0 3px #cdcdcd;
       line-height: 42px;
     }
-    .icon1{
+    .icon1 {
       background-color: blue;
     }
-    .icon2{
+    .icon2 {
       background-color: purple;
     }
-    .icon3{
+    .icon3 {
       background-color: yellow;
     }
-
   }
 }
 
@@ -404,27 +417,26 @@
     position: relative;
     z-index: 1;
     text-align: center;
-    .icon5{
-      img{
-        width: 150px;   
+    .icon5 {
+      img {
+        width: 150px;
         height: 50px;
       }
     }
-    .icon6{
-      img{
-        width: 150px;   
+    .icon6 {
+      img {
+        width: 150px;
         height: 50px;
       }
     }
   }
 }
 
-
 @media (min-width: 900px) and (max-width: 1100px) {
   .menu {
     .nav-item {
       .nav-link {
-        color: black; 
+        color: black;
         font-size: 10px !important;
         text-transform: uppercase;
         font-weight: bold;
@@ -447,11 +459,11 @@
       }
     }
   }
-  #IntroMenu{
+  #IntroMenu {
     display: none !important;
   }
-  #Intro{
-    display: none  !important;
+  #Intro {
+    display: none !important;
   }
 }
 
@@ -463,7 +475,7 @@
     }
     .nav-item {
       .nav-link {
-        color: black; 
+        color: black;
         font-size: 10px !important;
         text-transform: uppercase;
         font-weight: bold;
@@ -486,19 +498,25 @@
       }
     }
   }
-  #IntroMenu{
-    display: none  !important;
+  #IntroMenu {
+    display: none !important;
   }
-  #Intro{
-    display: none  !important;
+  #Intro {
+    display: none !important;
   }
+  #navbar {
+    display: none;
+   }
 }
 
 @media (min-width: 300px) and (max-width: 700px) {
-  #IntroMenu{
+  #IntroMenu {
     display: none !important;
   }
-  #Intro{
-    display: none  !important;
+  #Intro {
+    display: none !important;
+  }
+  #navbar {
+   display: none;
   }
 }
