--- a/scss/index.scss
+++ b/scss/index.scss
@@ -41,7 +41,7 @@
   width: 100%;
   transition: top 0.3s;
   z-index: 999;
-  .navbar-brand{
+  .navbar-brand {
     margin-left: 150px;
   }
 }
@@ -286,10 +286,13 @@
   }
   .cap-mat {
     text-align: center;
+    &:hover {
+      color: rgb(224, 155, 6);
+    }
   }
 }
 
-#tintuc {
+#tintuc ,#content {
   margin-top: 2%;
   .cap-main {
     padding-top: 50px;
@@ -310,44 +313,217 @@
     }
   }
   img {
-    height: 250px;
+    height: 200px;
     width: 350px;
   }
-  .cap-mat {
+  .plus {
+    &:hover {
+      opacity: 0.8;
+      transition: all 0.5s;
+    }
+  }
+  a {
+    text-decoration: none;
+    .cap-mat {
+      margin-top: 5%;
+      text-align: center;
+      h3 {
+        color: black;
+        font-weight: bold;
+        font-size: 17px;
+        &:hover {
+          color: rgb(224, 155, 6);
+        }
+      }
+      p {
+        color: black;
+        font-size: 15px;
+      }
+    }
+  }
+  .info {
+    color: #aaa2a2;
+    padding-left: 10px;
+    span {
+      padding-left: 5px;
+    }
+  }
+}
+
+#content {
+  .tt{
+   .abc{
+     width: 1000px;
+     height: 400px;
+   }
+    h3{
+      text-align: center;
+      color: rgb(224, 155, 6);
+    }
+  }
+  ul {
+    list-style: none;
+    display: flex;
+    li {
+      margin: 3%;
+    }
+    li:hover {
+      transform: translate(0, -0.5em);
+      transition: all 0.5s ease 0s;
+    }
+  }
+  #inf {
+    margin-left: 300px;
+    i {
+      color: #f1f1f1;
+    }
+    li:nth-child(1) {
+      i {
+        color: #0e508a;
+      }
+    }
+    li:nth-child(2) {
+      i {
+        color: #002aff;
+      }
+    }
+    li:nth-child(3) {
+      i {
+        color: rgb(199, 56, 56);
+      }
+    }
+    li:nth-child(4) {
+      i {
+        color: #ff0000;
+      }
+    }
+    li:nth-child(5) {
+      i {
+        color: #e63ea0;
+      }
+    }
+  }
+}
+
+#searchbox {
+  position: relative;
+  width: 100px;
+  height: 35px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 15px;
+  font-size: 16px;
+  background-color: rgba(0, 0, 0, 0);
+  background-size: 30px 23px;
+  background-position: 5px 11px;
+  background-repeat: no-repeat;
+  padding-left: 12px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+
+#searchbox:focus {
+  width: 250px;
+  border-radius: 15px;
+  outline: none;
+}
+
+#tinnew {
+  margin-top: 5%;
+  /* Let's get this party started */
+  /* Track */
+  /* Handle */
+  h2 {
     margin-top: 5%;
-    text-align: center;
-    h3 {
-      font-weight: bold;
-      font-size: 17px;
+    line-height: 1 !important;
+    border-radius: 5px;
+    height: 33px;
+    background-color: #c4161c;
+    span {
+      padding-left: 10px;
+      bottom: 5px;
+      position: relative;
+      color: white;
+      font-size: 16px !important;
+      text-transform: uppercase;
+      border-radius: 5px;
     }
+  }
+  .scroll {
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 350px;
+    background-color: white;
+    scrollbar-arrow-color: black;
+    scrollbar-face-color: black;
+    scrollbar-track-color: gray;
+    padding: 10px;
+    /*   scrollbar-3dlight-color: gray; */
+    /*   scrollbar-highlight-color: white; */
+    scrollbar-shadow-color: black;
     p {
-      font-size: 15px;
+      list-style: none;
+      font-weight: 400px;
+      font-size: 14px;
+      color: #333333;
+      border-bottom: 1px solid #c0c0c0;
+      padding-left: 3%;
+      height: auto;
+      margin-bottom: 5%;
+      line-height: 23px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+    }
+    a {
+      text-decoration: none;
+      display: flex;
+      i {
+        padding-top: 5px;
+        color: #c4161c;
+      }
+    }
+    p:hover {
+      color: #c4161c;
     }
   }
-  .plus-zoom:hover::before {
-    right: 50%;
-    left: 50%;
-    background-color: rgba(255, 255, 255, 0.5);
+  ::-webkit-scrollbar {
+    width: 7px;
   }
-  .plus-zoom:hover::after {
-    top: 50%;
-    bottom: 50%;
-    background-color: rgba(255, 255, 255, 0.5);
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
   }
-  .plus-zoom::before,
-  .plus-zoom::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    -webkit-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    -ms-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-    z-index: 1;
+  ::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #c4161c;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    &:window-inactive {
+      background: #c4161c;
+    }
+  }
+}
+
+.phan {
+  margin-top: 5%;
+  .page-item {
+    .page-link {
+      z-index: 1;
+      color: black;
+      border-color: #c4161c;
+    }
+  }
+  .active {
+    .page-link {
+      z-index: 1;
+      color: #fff;
+      background-color: #c4161c;
+      border-color: #c4161c;
+    }
   }
 }
 
@@ -465,6 +641,17 @@
   #Intro {
     display: none !important;
   }
+  #content {
+    .tt{
+      .abc{
+        width: 100% !important;
+        height: auto !important;
+      }
+    }
+    #inf {
+      margin-left: 0px;
+    }
+  }
 }
 
 @media (min-width: 700px) and (max-width: 900px) {
@@ -506,7 +693,18 @@
   }
   #navbar {
     display: none;
-   }
+  }
+  #content {
+    .tt{
+      .abc{
+        width: 100% !important;
+        height: auto !important;
+      }
+    }
+    #inf {
+      margin-left: 0px;
+    }
+  }
 }
 
 @media (min-width: 300px) and (max-width: 700px) {
@@ -517,6 +715,17 @@
     display: none !important;
   }
   #navbar {
-   display: none;
+    display: none;
+  }
+  #content {
+    .tt{
+      .abc{
+        width: 100% !important;
+        height: auto !important;
+      }
+    }
+    #inf {
+      margin-left: 0px;
+    }
   }
 }
